--- a/google-two-tier/ansible/dbserver.yml
+++ b/google-two-tier/ansible/dbserver.yml
@@ -3,4 +3,34 @@
 - hosts: dbserver
   sudo: yes
   roles:
-  - geerlingguy.mysql
+  - mysql
+  tasks:
+  - name: restart mysqld
+    service:
+      name: mysqld
+      enabled: yes
+      state: restarted
+
+  - name: Add IPTABLES rules
+    iptables:
+      action: insert
+      chain: INPUT
+      ctstate: ESTABLISHED,RELATED
+      jump: ACCEPT
+
+  - name: Open 3306 port
+    iptables:
+      action: insert
+      chain: INPUT
+      destination_port: 3306
+      protocol: tcp
+      jump: ACCEPT
+
+  - name: SELINUX python
+    yum:
+      name: libselinux-python
+      state: present
+
+  - name: SELINUX disabled
+    selinux:
+      state: disabled
