--- a/google-two-tier/ansible/php/vars/RedHat.yml
+++ b/google-two-tier/ansible/php/vars/RedHat.yml
@@ -9,12 +9,11 @@ __php_packages:
   - php-imap
   - php-ldap
   - php-mbstring
-  - php-opcache
   - php-pdo
   - php-pear
-  - php-pecl-apcu
   - php-xml
   - php-xmlrpc
+  - php-mysql
 __php_webserver_daemon: "httpd"
 
 __php_conf_paths:
