--- a/google-two-tier/ansible/web.yml
+++ b/google-two-tier/ansible/web.yml
@@ -3,11 +3,34 @@
 - hosts: web
   become: yes
   roles:
-#  - apache
-#  - php
+  - apache
+  - php
   - wordpress-apache
 #  vars_files:
 #    - darthwade.wordpress-apache/vars/main.yml
+  tasks:
+  - iptables:
+      action: insert
+      chain: INPUT
+      ctstate: ESTABLISHED,RELATED
+      jump: ACCEPT
 
-# - include: dbserver.yml
+  - name: Open 80 port
+    iptables:
+      action: insert
+      chain: INPUT
+      destination_port: 80
+      protocol: tcp
+      jump: ACCEPT
+
+  - name: SELINUX python
+    yum:
+      name: libselinux-python
+      state: present
+
+  - name: SELINUX disabled
+    selinux:
+      state: disabled
+
+- include: dbserver.yml
 
