--- a/google-two-tier/ansible/wordpress/defaults/main.yml
+++ b/google-two-tier/ansible/wordpress/defaults/main.yml
@@ -1,12 +1,12 @@
 ---
-wp_version: 4.0
+wp_version: 4.7
 # TODO: https://wordpress.org/download/release-archive/
 # wp_sha256sum: 8543e31d7c0a1b15f73dbb20f9161845f3d2bb8de3d7aef371cf32bba41747ee
 wp_install_dir: '/var/www/html'
-wp_db_name: 'database_name_here'
-wp_db_user: 'username_here'
-wp_db_password: 'password_here'
-wp_db_host: 'localhost'
+wp_db_name: 'wordpress'
+wp_db_user: 'wpuser'
+wp_db_password: 'wordpresspass'
+wp_db_host: '192.168.33.30'
 wp_db_charset: 'utf8'
 wp_db_collate: ''
 wp_table_prefix: 'wp_'
