--- a/google-two-tier/ansible/roles/mysql/tasks/configure.yml
+++ b/google-two-tier/ansible/roles/mysql/tasks/configure.yml
@@ -73,3 +73,5 @@
 - name: Ensure MySQL is started and enabled on boot.
   service: "name={{ mysql_daemon }} state=started enabled={{ mysql_enabled_on_startup }}"
   register: mysql_service_configuration
+  notify: open established connections
+  notify: open 3306 port
