--- a/google-two-tier/ansible/roles/wordpress/tasks/main.yml
+++ b/google-two-tier/ansible/roles/wordpress/tasks/main.yml
@@ -2,15 +2,19 @@
 - name: Wordpresss | Ensure that installation directory exists
   file: path={{wp_install_dir|dirname}} state=directory
 
-- name: Wordpresss | Download {{wp_version}} to /tmp
-  get_url: url=http://wordpress.org/wordpress-{{wp_version}}.tar.gz force=no dest=/tmp/wordpress-{{wp_version}}.tar.gz
-  # TODO sha256sum="{{ wp_sha256sum }}"
+#- name: Wordpresss | Download {{wp_version}} to /tmp
+#  get_url: url=http://wordpress.org/wordpress-{{wp_version}}.tar.gz force=no dest=/tmp/wordpress-{{wp_version}}.tar.gz
+ # TODO sha256sum="{{ wp_sha256sum }}"
 
 - name: Wordpresss | Extract archive
-  unarchive: src=/tmp/wordpress-{{wp_version}}.tar.gz dest=/tmp copy=no
+  unarchive:
+    remote_src: yes
+    src: http://wordpress.org/wordpress-{{wp_version}}.tar.gz
+    dest: /tmp
+    creates: /tmp/wordpress
 
 - name: Wordpresss | Move extracted directory to {{wp_install_dir}}
-  shell: mv /tmp/wordpress/* {{wp_install_dir}} #creates={{wp_install_dir}}
+  shell: mv /tmp/wordpress/* {{wp_install_dir}} creates={{wp_install_dir}}/index.php
 
 - name: Wordpresss | Remove wordpress-{{wp_version}}.tar.gz
   file: path=/tmp/wordpress-{{wp_version}}.tar.gz state=absent
