added secrets added include starting from dbserver playbook

--- a/google-two-tier/ansible/ansible.cfg
+++ b/google-two-tier/ansible/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
 
 host_key_checking=false
-inventory=inventory
-remote_user = vagrant
+inventory=inventory_dir/
+remote_user = mtacu
 roles_path = roles
+private_key_file = ~/.ssh/gcloud_id_rsa
