--- a/google-two-tier/ansible/inventory_dir/gce.ini
+++ b/google-two-tier/ansible/inventory_dir/gce.ini
@@ -37,14 +37,15 @@
 # statement in the inventory script.  However, you can specify an absolute
 # path to the secrets.py file with 'libcloud_secrets' parameter.
 # This option will be deprecated in a future release.
-libcloud_secrets =
+libcloud_secrets = /Users/mtacu/Repos/git-max/google-terraform/google-two-tier/ansible/inventory_dir/secrets.py
+group_by_tag_keys = True
 
 # If you are not going to use a 'secrets.py' file, you can set the necessary
 # authorization parameters here.
-gce_service_account_email_address = maxtacu95@gmail.com
+gce_service_account_email_address =
 gce_service_account_pem_file_path =
-gce_project_id = decent-rig-165113
-gce_zone = europe-west1-b
+gce_project_id =
+gce_zone =
 
 # Filter inventory based on on state. Leave undefined to return instances regardless of state.
 # example: Uncomment to only return inventory in the running or provisioning state
